fix header background and header ss dots spacing and location

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -2,9 +2,7 @@ header {
     max-width: 1600px;
     width: 100%;
     min-height: 800px;
-    background-image:
-    linear-gradient(216deg, rgba(126,90,255,1) 0%, rgba(85,183,255,0.7038165608040091) 49%),
-    url(../images/background-header.png);
+    background-image: url(../images/background-header-new.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -104,8 +102,7 @@ nav {
 .header__slick-slider {
     margin-left: 30px;
     margin-right: 30px;
-    margin-top: 100px;
-    margin-bottom: 30px;
+    margin-top: 223px;
     max-width:917px;
     width: 100%;
     height: 420px;
@@ -133,26 +130,31 @@ nav {
 
 
 
+.header__slick-slider-container {
+    margin-top: 223x;
+    >.slick-dots {
+        display: flex;
+        justify-content:space-between;
+        align-items: flex-end;
+        flex-direction: column;
+        margin-left: 280px;
+        height: 200px;
+        position: absolute;
+        bottom: 40px;
 
-.slick-dots {
-    display: flex;
-    justify-content:flex-start;
-    align-items: flex-end;
-    flex-direction: column;
+    }
+    >.slide-content {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
 }
 
-.slide-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
 
-.header__nav-down-btn:hover {
-    color: $title-text;
-}
 
-.header__nav-down-btn:focus {
+
+.header__nav-down-btn:hover :focus {
     color: $title-text;
 }
 
